--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <!-- <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"> -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>PicFixer</title>
 </head>
 
